--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,12 +45,44 @@ a{
 
 #main_container{
   position: relative;
+  flex-direction: column;
   top: 69px;
 }
 
+/* Mission Section Styling */
 #mission{
   height: 700px;
   width: 1200px;
   margin: 0 auto;
-  background-image: url("../images/Background.jpg")
+  background-image: url("../images/Background.jpg");
+  align-items: center;
+}
+#mission_text{
+  width: 1200px;
+  text-align: center;
+  background-color: black;
+  padding: 15px 0;
+}
+
+/* Tea of the Month Styling */
+#tea_of_the_month{
+  margin-top: 50px;
+  flex-direction: column;
+  align-items: center;
+  width: 1000px;
+}
+
+#pictures{
+  flex-direction: row;
+  flex-wrap:wrap;
+  width: 1000px;
+  justify-content: center;
+}
+#pictures .element{
+  width: 300px;
+  margin: 15px;
+}
+
+.element img{
+  height: 200px;
 }
