--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -46,6 +46,7 @@ a{
 #main_container{
   position: relative;
   flex-direction: column;
+  align-items: center;
   top: 69px;
 }
 
@@ -83,6 +84,34 @@ a{
   margin: 15px;
 }
 
-.element img{
+#pictures .element img{
   height: 200px;
+  padding-bottom: 10px;
 }
+
+/* Locations styling */
+#location_container{
+  background-image: url("../images/Locations.jpg");
+  height: 600px;
+  width: 1200px;
+  margin-top: 50px;
+}
+
+#location_container h2{
+  margin-top: 100px;
+}
+#locations{
+  justify-content: center;
+  margin-top: 15px;
+}
+#locations .element{
+  flex-direction: column;
+  background-color: black;
+  justify-content: space-around;
+  margin: 0 20px;
+  width: 300px;
+  height: 250px;
+  opacity: 1;
+}
+
+/* Contact Information Styling */
