--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,6 +10,7 @@ body{
   color: seashell;
   opacity: 0.9;
   text-align: center;
+  width: 100%
 }
 
 /* Styling for header section */
@@ -115,3 +116,17 @@ a{
 }
 
 /* Contact Information Styling */
+#contact_information{
+  height: 200px;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%
+}
+
+/* Footer Styling */
+footer{
+  margin: 100px 0px 25px 20px;
+  text-align: left;
+  margin-bottom:
+}
